# bw-img-tool

./: Cargo.toml  README.md
src/: bw.rs  main.rs  vid.rs
