[package]
name = "bw-img-tool"
version = "0.1.0"
edition = "2021"

[features]
default = ["video"]
video = ["ffmpeg-next"]
image = []

[dependencies]
ffmpeg-next = { version = "*", optional = true }
clap = { version = "*", features = ["derive"] }
bw-img = { git = "https://github.com/arkuna23/bw-img.git" }
anyhow = "*"
flate2 = "*"
crossterm = "*"
